update screenshots, increase zoom, fix double scrollbar in entry

--- a/letskaypoh/src/pages/Entry/styles.css
+++ b/letskaypoh/src/pages/Entry/styles.css
@@ -6,7 +6,6 @@
     min-height: 100vh;
     height: 100%;
     width: 100vw;
-    overflow-y: scroll;
   
     @media (min-width: 1000px) {
       flex-direction: row;
